@@ -1,3 +1,8 @@
+2010-06-14  Jaroslav Hajek  <highegg@gmail.com>
+
+	* idx-vector.cc (idx_vector::copy_data): Handle class_mask case.
+	(idx_vector::increment): Fix class_colon and add class_mask.
+
 2010-06-06  Michael Goffioul  <michael.goffioul@gmail.com>
 
 	* mx-op-defs.h (MNANCHK): Add matrix element type argument and use it
